--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
     }
     .about-us-text {
         margin: 0 auto;
-        width: 870px;
+        width: 70%;
         font-size: 49px;
         line-height: 63,7px;
         color: #000000;
